samples/_failures_safe/1761644951_f00e18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc67b78f.c: In function ‘main’:
./samples/SAFE/__tmp_bc67b78f.c:155:35: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  155 |                     print_matrix(&mat
      |                                   ^~~
      |                                   mat2
./samples/SAFE/__tmp_bc67b78f.c:155:35: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bc67b78f.c:155:38: error: expected ‘)’ at end of input
  155 |                     print_matrix(&mat
      |                                 ~    ^
      |                                      )
./samples/SAFE/__tmp_bc67b78f.c:155:21: error: too few arguments to function ‘print_matrix’
  155 |                     print_matrix(&mat
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_bc67b78f.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_bc67b78f.c:155:21: error: expected declaration or statement at end of input
  155 |                     print_matrix(&mat
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_bc67b78f.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc67b78f.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc67b78f.c:155:21: error: expected declaration or statement at end of input
